consumir Apis Web Assembly

--- a/Ecommerce.WebAssembly/_Imports.razor
+++ b/Ecommerce.WebAssembly/_Imports.razor
@@ -8,3 +8,8 @@
 @using Microsoft.JSInterop
 @using Ecommerce.WebAssembly
 @using Ecommerce.WebAssembly.Shared
+
+@using Blazored.LocalStorage;
+
+@using Blazored.Toast
+@using Blazored.Toast.Services
