--- a/Ecommerce.WebAssembly/Pages/Admin/Categorias.razor
+++ b/Ecommerce.WebAssembly/Pages/Admin/Categorias.razor
@@ -78,7 +78,15 @@
 
     protected override async Task OnInitializedAsync()
     {
-        await ObtenerCategorias();
+        try
+        {
+            await ObtenerCategorias();
+        }
+        catch (Exception ex)
+        {
+            // Aquí podrías utilizar BlazoredToast para mostrar un mensaje de error si lo deseas
+            Console.WriteLine($"Error en OnInitializedAsync: {ex.Message}");
+        }
     }
 
     private async Task Eliminar(CategoriaDTO modelo)
