--- a/Ecommerce.WebAssembly/Shared/NavMenu.razor
+++ b/Ecommerce.WebAssembly/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" runat="server" href="#">Ecommerce Demo</a>
+        <a class="navbar-brand" runat="server" href="#">Ecommerce MANIES</a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
