Se agrego modulo Dashboard y Catalogo/ Se cambiaron cosas del toast que no funcionaban /Se agrego detalle producto y carrito

--- a/Ecommerce.WebAssembly/Shared/MainLayout.razor
+++ b/Ecommerce.WebAssembly/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<BlazoredToast />
+<BlazoredToasts />
 <NavMenu />
 <div class="container body-content">
     @Body
