--- a/Ecommerce.WebAssembly/Shared/NavMenu.razor
+++ b/Ecommerce.WebAssembly/Shared/NavMenu.razor
@@ -1,4 +1,7 @@
-﻿<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light">
+﻿@inject ICarritoServicio carritoServicio
+@implements IDisposable 
+
+<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" runat="server" href="#">Ecommerce MANIES</a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
@@ -18,13 +21,13 @@
 
 
             <span class="navbar-text me-3">
-                admins@example.com
+                nicolas.mannarino@hotmail.com
             </span>
 
             <a class="btn btn-outline-dark ms-auto ms-md-0 me-3" href="/cart">
                 <i class="bi-cart-fill me-1"></i>
                 Cart
-                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                <span class="badge bg-dark text-white ms-1 rounded-pill">@mostrarCantidadCarrito()</span>
             </a>
 
             <button class="btn btn-outline-dark ms-auto ms-md-0 me-3" type="button">Salir</button>
@@ -43,5 +46,20 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    protected override void OnInitialized()
+    {
+        carritoServicio.MostrarItems += StateHasChanged;
+    }
+
+    public void Dispose()
+    {
+        carritoServicio.MostrarItems -= StateHasChanged;
+    }
+
+    private int mostrarCantidadCarrito()
+    {
+        return carritoServicio.CantidadProductos();
     }
 }
