--- a/Ecommerce.WebAssembly/Pages/Admin/Dashboard.razor
+++ b/Ecommerce.WebAssembly/Pages/Admin/Dashboard.razor
@@ -1,6 +1,7 @@
 ﻿@page "/dashboard"
 
 @inject IDashboardServicio dashboardServicio
+@attribute [Authorize(Roles = "Administrador")];
 
 <div class="row mt-4">
 
@@ -12,7 +13,7 @@
                         Total Ingresos
                     </div>
                     <div class="h5 mb-0 fw-bold text-muted">
-                        S/. @dashboard.TotalIngresos
+                        $ @dashboard.TotalIngresos
                     </div>
                 </div>
                 <div class="col-auto">
