--- a/Ecommerce.WebAssembly/Pages/Admin/Producto.razor
+++ b/Ecommerce.WebAssembly/Pages/Admin/Producto.razor
@@ -6,6 +6,7 @@
 @inject IToastService toastService
 @inject NavigationManager _navServicio
 
+@attribute [Authorize(Roles = "Administrador")];
 
 
 <div class="row justify-content-center  mt-3">
