--- a/Ecommerce.WebAssembly/Pages/Admin/Productos.razor
+++ b/Ecommerce.WebAssembly/Pages/Admin/Productos.razor
@@ -4,6 +4,8 @@
 @inject IToastService toastService
 @inject SweetAlertService Swal
 
+@attribute [Authorize(Roles = "Administrador")];
+
 <div class="row justify-content-center  mt-3">
     <div class="col-sm-6 col-md-4 col-xl-3 mb-4">
         <div class="d-grid gap-1 col-12 mx-auto">
@@ -44,12 +46,12 @@
                             <!-- Product price-->
                             @if (item.PrecioOferta != 0 && item.PrecioOferta < item.Precio)
                             {
-                                <span class="text-danger text-decoration-line-through">S/. @item.Precio</span>
-                                <span>S /.@item.PrecioOferta</span>
+                                <span class="text-danger text-decoration-line-through">$ @item.Precio</span>
+                                <span>$@item.PrecioOferta</span>
                             }
                             else
                             {
-                                <span>S /.@item.Precio</span>
+                                <span>$@item.Precio</span>
                             }
 
                         </div>
