--- a/Ecommerce.WebAssembly/Pages/Tienda/Catalogo.razor
+++ b/Ecommerce.WebAssembly/Pages/Tienda/Catalogo.razor
@@ -87,12 +87,12 @@
                                     <!-- Product price-->
                                     @if (item.PrecioOferta != 0 && item.PrecioOferta < item.Precio)
                                     {
-                                        <span class="text-danger text-decoration-line-through">S/. @item.Precio</span>
-                                        <span>S /.@item.PrecioOferta</span>
+                                        <span class="text-danger text-decoration-line-through">$ @item.Precio</span>
+                                        <span>$@item.PrecioOferta</span>
                                     }
                                     else
                                     {
-                                        <span>S /.@item.Precio</span>
+                                        <span>$@item.Precio</span>
                                     }
                                 </div>
                             </div>
