--- a/Ecommerce.WebAssembly/Pages/Tienda/Detalle.razor
+++ b/Ecommerce.WebAssembly/Pages/Tienda/Detalle.razor
@@ -19,12 +19,12 @@
 
                     @if (modelo.PrecioOferta != 0 && modelo.PrecioOferta < modelo.Precio)
                     {
-                        <span class="text-danger text-decoration-line-through">S/. @modelo.Precio</span>
-                        <span>S /.@modelo.PrecioOferta</span>
+                        <span class="text-danger text-decoration-line-through">$ @modelo.Precio</span>
+                        <span>$@modelo.PrecioOferta</span>
                     }
                     else
                     {
-                        <span>S /.@modelo.Precio</span>
+                        <span>$@modelo.Precio</span>
                     }
                 </div>
                 <p class="lead">@modelo.Descripcion</p>
