--- a/Ecommerce.WebAssembly/Pages/Tienda/Catalogo.razor
+++ b/Ecommerce.WebAssembly/Pages/Tienda/Catalogo.razor
@@ -77,8 +77,12 @@
                             {
                                 <div class="badge bg-primary text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Nuevo</div>
                             }
-                            <!-- Product image-->
-                            <img class="card-img-top border-dark border-1" src="@item.Imagen" style="width:100%;height:250px">
+                            <!-- Product image
+                            <img class="card-img-top border-dark border-1" src="@item.Imagen" style="width:100%;height:250px">-->
+                            @if (item.Imagenes != null && item.Imagenes.Any())
+                            {
+                                <img class="card-img-top border-dark border-1" src="@item.Imagenes.First().RutaImagen" alt="Imagen del producto">
+                            }
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
