--- a/Ecommerce.WebAssembly/Pages/Tienda/Detalle.razor
+++ b/Ecommerce.WebAssembly/Pages/Tienda/Detalle.razor
@@ -11,8 +11,18 @@
     {
         <div class="row gx-4 gx-lg-5 align-items-center">
             <div class="col-md-6">
-                <img class="card-img-top border-dark border-1" src="@modelo.Imagen" style="width:100%;">
+                @if (modelo.Imagenes != null && modelo.Imagenes.Any())
+                {
+                    <img class="card-img-top border-dark border-1" src="@modelo.Imagenes.First().RutaImagen" alt="Imagen del producto">
+                }
+                else
+                {
+                    <p>No hay imágenes disponibles.</p>
+                }
             </div>
+            <!--<div class="col-md-6">
+                <img class="card-img-top border-dark border-1" src="@modelo.Imagenes.First().RutaImagen" style="width:100%;">
+            </div>-->
             <div class="col-md-6">
                 <h1 class="display-5 fw-bolder">@modelo.Nombre</h1>
                 <div class="fs-5 mb-5">
