--- a/Ecommerce.WebAssembly/Pages/Tienda/Detalle.razor
+++ b/Ecommerce.WebAssembly/Pages/Tienda/Detalle.razor
@@ -5,28 +5,39 @@
 @inject ICarritoServicio carritoServicio
 
 <div class="container px-4 px-lg-5 my-5">
-
-
     @if (modelo != null)
     {
         <div class="row gx-4 gx-lg-5 align-items-center">
             <div class="col-md-6">
                 @if (modelo.Imagenes != null && modelo.Imagenes.Any())
                 {
-                    <img class="card-img-top border-dark border-1" src="@modelo.Imagenes.First().RutaImagen" alt="Imagen del producto">
+                    <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            @for (int i = 0; i < modelo.Imagenes.Count; i++)
+                            {
+                                <div class="carousel-item @(i == 0 ? "active" : "")">
+                                    <img class="d-block w-100 border-dark border-1" src="@modelo.Imagenes[i].RutaImagen" alt="Imagen del producto">
+                                </div>
+                            }
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#productCarousel" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#productCarousel" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                 }
                 else
                 {
                     <p>No hay imágenes disponibles.</p>
                 }
             </div>
-            <!--<div class="col-md-6">
-                <img class="card-img-top border-dark border-1" src="@modelo.Imagenes.First().RutaImagen" style="width:100%;">
-            </div>-->
             <div class="col-md-6">
                 <h1 class="display-5 fw-bolder">@modelo.Nombre</h1>
                 <div class="fs-5 mb-5">
-
                     @if (modelo.PrecioOferta != 0 && modelo.PrecioOferta < modelo.Precio)
                     {
                         <span class="text-danger text-decoration-line-through">$ @modelo.Precio</span>
@@ -86,5 +97,4 @@
             };
         await carritoServicio.AgregarCarrito(carrito);
     }
-
 }
