--- a/Ecommerce.WebAssembly/Pages/Admin/Productos.razor
+++ b/Ecommerce.WebAssembly/Pages/Admin/Productos.razor
@@ -31,29 +31,23 @@
             DebugImagenes(item);
             <div class="col mb-5">
                 <div class="card h-100">
-                    <!-- Sale badge-->
                     @if (DateTime.Now < item.FechaCreacion.Value.AddDays(30))
                     {
                         <div class="badge bg-primary text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Nuevo</div>
                     }
 
-                    <!-- Product image-->
-                    <!--<img class="card-img-top border-dark border-1" src="@item.Imagenes.First().RutaImagen">-->
                     @if (item.Imagenes != null && item.Imagenes.Any())
                     {
                         <img class="card-img-top border-dark border-1" src="@item.Imagenes.First().RutaImagen" alt="Imagen del producto">
                     }
                     else
                     {
-                        <p>No hay imágenes disponibles.</p> <!-- Opcional: Mostrar un mensaje alternativo si no hay imágenes -->
+                        <p>No hay imágenes disponibles.</p> 
                     }
 
-                    <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
-                            <!-- Product name-->
                             <h5 class="fw-bolder">@item.Nombre</h5>
-                            <!-- Product price-->
                             @if (item.PrecioOferta != 0 && item.PrecioOferta < item.Precio)
                             {
                                 <span class="text-danger text-decoration-line-through">$ @item.Precio</span>
